# fxp

./: .gitignore  Benchmark.md  README.md
fix_bridge/: go.mod  main.go
fix_bridge/codec/: builder.go  fields.go  parser.go
fix_bridge/gateway/: client.go
fix_bridge/session/: session.go
fix_bridge/translator/: fix_to_fxp.go  fxp_to_fix.go
fix_test_client/: fix_client.py
fxp_core/: Cargo.toml  build.rs
fxp_core/proto/: fxp.proto
fxp_core/src/: integration_test.rs  lib.rs  main.rs  server.rs
fxp_core/src/benches/: encoding_benchmark.rs
fxp_core/src/order_book/: broadcaster.rs  execution_report.rs  market_data.rs  matcher.rs  mod.rs  order.rs  order_book.rs
go_gateway/: go.mod  go.sum  main.go
go_gateway/benchmark/: benchmark.go
go_gateway/simulation/: trading_day.go
go_gateway/test_clients/: jwt_helpers.go  tcp_test_client.go  ws_test_client.go
go_gateway/transport/: auth.go  common.go  pool.go  tcp_server.go  ws_server.go
